# face_recognition

./: .gitignore  CMakeLists.txt  app.sh  config.h.in  faceapp  makefile  vpss_grp0_chn0_1920x1080_P420_1.yuv
libdlib/include/dlib/: config.h  revision.h
libdlib/lib/cmake/dlib/: dlib.cmake  dlibConfig.cmake  dlibConfigVersion.cmake
libdlib/lib/pkgconfig/: dlib-1.pc
libfacedetection/lib/cmake/facedetection/: facedetectionConfigVersion.cmake
libopencv/include/opencv4/opencv2/: cvconfig.h
libopencv/lib/: libopencv_calib3d.so.4.5.2  libopencv_features2d.so.4.5.2  libopencv_flann.so.4.5.2  libopencv_highgui.so.4.5.2  libopencv_imgcodecs.so.4.5.2  libopencv_ml.so.4.5.2  libopencv_objdetect.so.4.5.2  libopencv_photo.so.4.5.2  libopencv_stitching.so.4.5.2  libopencv_video.so.4.5.2  libopencv_videoio.so.4.5.2
libopencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
src/: detect-image.cpp  detect-image.hh  main.cpp  main.hh
